# cloudsecurium_cryptfs

./: .gitignore  CMakeLists.txt  Makefile  Makefile_osx  Readme.txt  base32.c  buf.c  buf.h  cfs_syscall.h  cfs_syscall_unix.c  cfs_syscall_windows.c  common.c  common.h  crypher.c  crypher.h  cryptfs.c  cryptfs.h  key_file.c  key_file.h  kref.c  kref.h  kref_alloc.c  kref_alloc.h  list.c  list.h  required_posix.c  required_posix.h  test.c  types.h  win_dirent.c
